--- a/views/3complidor.hbs
+++ b/views/3complidor.hbs
@@ -45,7 +45,7 @@
             <!-- Sección Video Explicativo -->
             <div class="video-explicativo">
                 <h4 class="subtitulo">Video Explicativo</h4>
-                <a href="https://www.youtube.com/watch?v=videoID" target="_blank">
+                <a href="https://drive.google.com/file/d/1PzLvbVVYb-AEwwdRkgCFjLt7x0xi1mat/view?usp=drive_link" target="_blank">
                     <img src="/img/0video explicativo.png" alt="Vista previa del video" class="vista-previa-video">
                 </a>
             </div>
