--- a/views/5recursos.hbs
+++ b/views/5recursos.hbs
@@ -45,8 +45,7 @@
             <!-- Sección Video Explicativo -->
             <div class="video-explicativo">
                 <h4 class="subtitulo">Video Explicativo</h4>
-                <a href="https://www.youtube.com/watch?v=videoID" target="_blank">
-                    <img src="/img/0video explicativo.png" alt="Vista previa del video" class="vista-previa-video">
+                <a href="https://drive.google.com/file/d/1xHPFbrwFGQ7smg26AmPjJrBsKhkle185/view?usp=sharing" alt="Vista previa del video" class="vista-previa-video">
                 </a>
             </div>
         </div>
