--- a/views/6resgistro.hbs
+++ b/views/6resgistro.hbs
@@ -45,7 +45,7 @@
             <!-- Sección Video Explicativo -->
             <div class="video-explicativo">
                 <h4 class="subtitulo">Video Explicativo</h4>
-                <a href="https://www.youtube.com/watch?v=videoID" target="_blank">
+                <a href="https://drive.google.com/drive/folders/18ygZU3jSnIYUfCvORIlEAYb8xcE9oTSj?usp=sharing" target="_blank">
                     <img src="/img/0video explicativo.png" alt="Vista previa del video" class="vista-previa-video">
                 </a>
             </div>
