--- a/views/home.hbs
+++ b/views/home.hbs
@@ -24,7 +24,7 @@
             </div>
             <div class="col derecha">
                 <h3>Especialización en Desarrollo de Soluciones Tecnológicas</h3>
-                <p>Me especializo en desarrollar sistemas robustos y escalables...</p>
+                <p>Soy estudiante de Ingeniería en Sistemas y tengo una gran pasión por aprender nuevos lenguajes de programación. Me entusiasma enfrentar retos complejos y resolver problemas mediante soluciones prácticas y eficientes. Mi objetivo es seguir desarrollándome y mejorar mis habilidades de forma continua en este camino....</p>
                 <br>
                 <div class="botones">
                     <a href="proyectos" class="btn-primary proyectos-btn">Proyectos</a>
