Actualización en script.js

--- a/views/5recursos.hbs
+++ b/views/5recursos.hbs
@@ -43,9 +43,13 @@
             </div>
     
             <!-- Sección Video Explicativo -->
-            <div class="video-explicativo">
+                <div class="video-explicativo">
                 <h4 class="subtitulo">Video Explicativo</h4>
-                <a href="https://drive.google.com/file/d/1xHPFbrwFGQ7smg26AmPjJrBsKhkle185/view?usp=sharing" alt="Vista previa del video" class="vista-previa-video">
+                <a href="https://drive.google.com/file/d/1xHPFbrwFGQ7smg26AmPjJrBsKhkle185/view?usp=sharing" target="_blank">
+                    <img src="/img/0video explicativo.png" alt="Vista previa del video" class="vista-previa-video">
+                </a>
+            </div>
+                
                 </a>
             </div>
         </div>
