--- a/views/3complidor.hbs
+++ b/views/3complidor.hbs
@@ -21,7 +21,7 @@
             <div class="lenguajes-utilizados">
                 <span class="lenguaje apache">APACHE</span>
                 <span class="lenguaje java">JAVA</span>
-                <span class="lenguaje github"><a href="https://github.com/tuRepositorio/proyecto01" target="_blank">REPOSITORIO</a></span>
+                <span class="lenguaje github"><a href="https://github.com/Benitez1484/Proyecto-Compiladores.git" target="_blank">REPOSITORIO</a></span>
             </div>
     
             <!-- Subtítulo Detalles del Proyecto -->
